--- a/cakephp/docker-compose.yml
+++ b/cakephp/docker-compose.yml
@@ -1,9 +1,11 @@
 version: "3"
 services:
   php:
-    build: ./php
+    build: ./test_app
     container_name: ${PREFIX_NAME}_php
-    entrypoint:
-      - ''
-    command:
-      - /bin/sh
+    ports:
+      - 10080:80
+    volumes:
+      - ./test_app:/app
+#    env_file:
+#      - ./php/.env
