--- a/cakephp/test_app/Dockerfile
+++ b/cakephp/test_app/Dockerfile
@@ -11,8 +11,7 @@ RUN apk update && \
 RUN docker-php-ext-install pdo_mysql mysqli mbstring
 
 # php-intl
-RUN apk update && \
-    apk add icu-dev && \
+RUN apk add --update --no-cache icu-dev && \
     rm -rf /var/cache/apk/* && \
     docker-php-ext-install intl
 
@@ -21,8 +20,14 @@ RUN apk add --update --no-cache zlib-dev && \
     docker-php-ext-install zip
 
 # xdebug
-#RUN pecl install xdebug && docker-php-ext-enable xdebug
+RUN apk add --update --no-cache $PHPIZE_DEPS \
+	&& pecl install xdebug \
+	&& docker-php-ext-enable xdebug
 
 # composer
 RUN curl -sS https://getcomposer.org/installer | php && \
     mv composer.phar /usr/local/bin/composer
+
+WORKDIR /app
+
+CMD ["bin/cake", "server", "-H", "0.0.0.0", "-p", "80"]
