feat: laravel on docker php7.1

--- a/laravel/Makefile
+++ b/laravel/Makefile
@@ -4,7 +4,7 @@
 	@cp .env.example .env
 
 up: .env
-	docker-compose up --force-recreate -d
+	docker-compose up --build --force-recreate -d
 
 down:
 	docker-compose down
