fix: test_app/Makefile dependency resolve and server up

--- a/laravel/test_app/Makefile
+++ b/laravel/test_app/Makefile
@@ -6,5 +6,5 @@
 vendor:
 	composer install --prefer-dist --optimize-autoloader --no-interaction
 
-dev/server: vendor
+dev/server: .env vendor
 	php artisan serve --host 0.0.0.0 --port 80
