--- a/golang/app/Makefile
+++ b/golang/app/Makefile
@@ -1,7 +1,13 @@
-.PHONY: up
+.PHONY: up go/*
 
 up:
 	go run main.go
 
 .env:
 	@cp .env.${ENV} .env
+
+go/build:
+	go build main.go
+
+go/exec: go/build
+	./main
