database環境構築、コンテナ作成時にcomposer installするようにした

--- a/cakephp/.env.example
+++ b/cakephp/.env.example
@@ -1,2 +1,9 @@
 PREFIX_NAME=etc-trial
 HTTP_PORT=10080
+MYSQL_PORT=13306
+TZ=Asia/Tokyo
+
+MYSQL_ROOT_PASSWORD=root_secret
+MYSQL_DATABASE=test_app
+MYSQL_USER=test_app
+MYSQL_PASSWORD=secret
