--- a/cakephp/docker-compose.yml
+++ b/cakephp/docker-compose.yml
@@ -7,3 +7,17 @@ services:
       - ${HTTP_PORT}:80
     volumes:
       - ./test_app:/app
+  database:
+    build:
+      context: ./database
+    volumes:
+    - database:/var/lib/mysql
+    ports:
+    - "${MYSQL_PORT}:3306"
+    env_file:
+    - ./.env
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 0
+
+volumes:
+  database:
