--- a/cakephp/test_app/Dockerfile
+++ b/cakephp/test_app/Dockerfile
@@ -2,6 +2,14 @@ FROM php:7.2-alpine
 
 MAINTAINER "Ikezoe Makoto" <150283t@gmail.com>
 
+ARG USER_ID
+ARG GROUP_ID
+
+RUN groupadd -g $GROUP_ID -o developer &&\
+    useradd -m developer -u $USER_ID -g $GROUP_ID
+
+USER developer
+
 # 必要そうなやつ
 RUN apk update && \
     apk add make git && \
