shadow使うように

--- a/cakephp/test_app/Dockerfile
+++ b/cakephp/test_app/Dockerfile
@@ -2,16 +2,16 @@ FROM php:7.2-alpine
 
 MAINTAINER "Ikezoe Makoto" <150283t@gmail.com>
 
+# 必要そうなやつ
+RUN apk update && \
+    apk add make git shadow && \
+    rm -rf /var/cache/apk/*
+
 ARG USER_ID
 ARG GROUP_ID
 
 RUN groupadd -g $GROUP_ID -o developer &&\
     useradd -m developer -u $USER_ID -g $GROUP_ID
-
-# 必要そうなやつ
-RUN apk update && \
-    apk add make git && \
-    rm -rf /var/cache/apk/*
 
 # php拡張
 RUN docker-php-ext-install pdo_mysql mysqli mbstring
@@ -40,4 +40,4 @@ COPY ./ app
 
 USER developer
 
-CMD make server-run
+CMD make server-runim
