--- a/cakephp/test_app/Dockerfile
+++ b/cakephp/test_app/Dockerfile
@@ -12,7 +12,6 @@ ARG GROUP_ID
 
 RUN groupadd -g $GROUP_ID -o developer &&\
     useradd -m developer -u $USER_ID -g $GROUP_ID
-USER developer
 
 # php拡張
 RUN docker-php-ext-install pdo_mysql mysqli mbstring
@@ -35,8 +34,9 @@ RUN apk add --update --no-cache $PHPIZE_DEPS \
 RUN curl -sS https://getcomposer.org/installer | php && \
     mv composer.phar /usr/local/bin/composer
 
+USER developer
 WORKDIR /home/developer/app
 
 COPY ./ /home/developer/app
 
-CMD make server-runim
+CMD make server-run
