add env for mysql port

--- a/wordpress-docker/.env.example
+++ b/wordpress-docker/.env.example
@@ -6,6 +6,7 @@ WORDPRESS_DB_USER=wordpress
 WORDPRESS_DB_PASSWORD=wordpress
 
 # mysql env
+MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=somewordpress
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wordpress
